--- a/config/costmap_common.yaml
+++ b/config/costmap_common.yaml
@@ -18,7 +18,7 @@ static:
 
 obstacles_laser:
     observation_sources: scan
-    scan: {sensor_frame: velodyne, data_type: LaserScan, clearing: true, marking: true, topic: scan, inf_is_valid: true}
+    scan: {sensor_frame: front_laser, data_type: LaserScan, clearing: true, marking: true, topic: front/scan, inf_is_valid: true}
 
 inflation:
     inflation_radius: 1.0
